updated referee reports

--- a/sections/Comments/EER-Referee-Comments.tex
+++ b/sections/Comments/EER-Referee-Comments.tex
@@ -33,7 +33,7 @@ An obvious challenge to establishing these causal effects is that the childcare 
 
 
 \item Related to the previous point, it is unclear whether one could attribute a difference in outcomes solely to a child attending a lower-quality childcare center. Presumably the ``treatment'' also involves changes in other inputs as the decision to send a child to childcare involves monetary costs (while ABC/CARE and home care presumably are free), and may coincide with increased maternal employment. So what is estimated here is the effect of using lower-quality childcare center combined with changes in parental income and time inputs into child development, which could be compensatory or complimentary. Are the negative effects for boys due to lower quality childcare, or do they capture income effects?
- \textbf{Yes it is true that ABC/CARE is free for the families. Unfortunately, we do not have the breadth of data and sample to be able to disentangle income effects from direct effects of the program. It is true, as we show in Table A.4, that the mothers of the control-group girls who stay at home do not work whereas 14\% of the control-group boys who stay at home have a mother who works. This is consistent with the fact that more boys than girls have a father present, both in the data and as a documented pattern (e.g., Dahl and Moretti, 2008). This could be one mechanism through which the decision is made and could have implications for quality of home care. We have expanded on this greatly throughout the paper to link family characteristics, selection into alternative care, and the gender differences in the treatment effects. This is especially highlighted in Section 5. In addition, the concept that we have on the quality of the alternative center-based care come from auxiliary historical documents (e.g., state and federal standards), rather than self-report or direct observation. We added this in-text. [JJH: We should estimate Pr(home $|$ father, etc.) by gender and report.][We now do this in Table 7 and find that there is a significant difference for boys.]}
+ \textbf{Yes it is true that ABC/CARE is free for the families. Unfortunately, we do not have the breadth of data and sample to be able to disentangle income effects from direct effects of the program. It is true, as we show in Table 5, that the mothers of the control-group girls who stay at home do not work whereas 14\% of the control-group boys who stay at home have a mother who works. This is consistent with the fact that more boys than girls have a father present, both in the data and as a documented pattern (e.g., Dahl and Moretti, 2008). This could be one mechanism through which the decision is made and could have implications for quality of home care. We have expanded on this greatly throughout the paper to link family characteristics, selection into alternative care, and the gender differences in the treatment effects. This is especially highlighted in Section 5. In addition, the concept that we have on the quality of the alternative center-based care come from auxiliary historical documents (e.g., state and federal standards), rather than self-report or direct observation. We added this in-text. [JJH: We should estimate Pr(home $|$ father, etc.) by gender and report.][We now do this in Table 6 and find that there is a significant difference for boys.]}
  
  Does the choice perhaps reflect the absence of good alternative informal childcare by the parent(s), grandparents and friends, relative to those who opt for home care? 
  \textbf{We attempted to use the presence of relatives as an instrument for selection into alternative center-based care. This is in Appendix E.1. There was an extensive neighborhood survey done when the ABC subjects (not CARE, unfortunately) were entering kindergarten. This included a more expansive enumeration of family in the area and allowed us to isolate which subjects had a grandparent in the area. In addition to this measure, we also used the survey information (available in ABC and CARE) on people who lived in the household to try to capture opportunity for home care. Using different combinations of these weaker instruments and a more plausibly exogenous one (being born in the fall, which would allow for easy enrollment into center-based care if following the academic year). We present various specifications in the appendix. The IV results are pretty comparable to the main results but less precise.}
@@ -64,7 +64,7 @@ Presumably the large effect then captures changes in maternal employment, thus e
 
 \textbf{6. Two children in the treatment group were diagnosed as developmentally delayed 6 and 36 months after the treatment began. This disqualified for treatment: Children were not supposed to be developmentally delayed. This is not a concern per se. The concern would be that analogous control-group children could not be detected (because usually there is less contact of program officers with control-group children). Given the complementary features offered to the control group and the frequent data collection, implementation staff kept a close relationship with the control-group children, which lessens that concern. [JJH: Proof?][This comes from conversations with FPG staff. As far as we know, this is not documented in published papers.]}
 
-\item Most of the analysis in the paper focuses on the direction rather than the magnitude of treatment effects, and all outcomes are treated as equally important. While I understand your motivation for doing so, clearly some outcomes matter more than others. In my view it would be useful to add a brief discussion of weighting, or relative importance of these outcomes in your benefit (rates of return) analysis. \textbf{We changed the focus to effect sizes (treatment-control mean divided by the control standard deviation), which allow for some sense of magnitude to give context to the other results (Table 1). We have added reference to the rate of return analysis in this section) to better connect the results. We have also added more references to the cost-benefit results throughout. [JJH: May cause problems in JPE.][The references are quite broad, and we have made the distinction between the two papers clear.]}
+\item Most of the analysis in the paper focuses on the direction rather than the magnitude of treatment effects, and all outcomes are treated as equally important. While I understand your motivation for doing so, clearly some outcomes matter more than others. In my view it would be useful to add a brief discussion of weighting, or relative importance of these outcomes in your benefit (rates of return) analysis. \textbf{We added effect sizes (treatment-control mean divided by the control standard deviation), which allow for some sense of magnitude to give context to the other results (Table 4). We have added reference to the rate of return analysis in this section) to better connect the results. We have also added more references to the cost-benefit results throughout. [JJH: May cause problems in JPE.][The references are quite broad, and we have made the distinction between the two papers clear.]}
 
 Furthermore, it appears from Tables 4 and 5 that the magnitudes of several estimated effects are very large (almost unrealistically so?), which at a minimum deserves more discussion in the paper. \textbf{Certain outcomes, especially income outcomes, have large variation. We removed these tables anyway due to a change in the presentation of results.} 
 
@@ -96,13 +96,13 @@ Furthermore, it appears from Tables 4 and 5 that the magnitudes of several estim
 
 This manuscript considers how a host of treatment outcomes differ between disadvantaged boys and girls who were subjects of two high-quality, random-assignment child care interventions. The manuscript finds that the number of significant socially beneficial treatment effects was higher for girls than boys and that the gender differences principally stem from a smaller number of significant treatment effects for boys when the relevant comparison is home care. The manuscript makes a methodological contribution through its use and statistical analysis of combining functions to count and statistically compare the numbers of significant socially beneficial treatment effects. As a methodological exercise, the manuscript is impressive. However, although the manuscript applies these methods to an important child care experiment, its substantive contribution is less clear. 
 
-First, comparisons of the counts of significant effects may not be especially valuable in this context. There is little consideration of the magnitudes of effects.  \textbf{We changed the summary of results in the introduction in order to highlight the magnitude of the treatment effects rather than the direction/significance. Table 1 now shows standardized treatment effects by gender. These results are consistent with and complement the other analysis that focuses more on direction/significance or relative magnitude (comparing male results to female results). We reference the companion cost-benefit analysis more clearly throughout the paper, which focuses more on the magnitudes given that it weighs them by their associated social cost.} 
+First, comparisons of the counts of significant effects may not be especially valuable in this context. There is little consideration of the magnitudes of effects.  \textbf{We changed the summary of results in Section 4 in order to highlight the magnitude of the treatment effects rather than the direction/significance. Table 4 now shows standardized treatment effects by gender. These results are consistent with and complement the other analysis that focuses more on direction/significance or relative magnitude (comparing male results to female results). We reference the companion cost-benefit analysis more clearly throughout the paper, which focuses more on the magnitudes given that it weighs them by their associated social cost.} 
 
-Also, many of the outcomes are highly-gendered adult behaviors, such as employment and arrests, where we might not have expectations of comparable effects. Even if child care had similar effects on boys' and girls' early cognitive, emotional and behavioral outcomes, these might not translate into comparable adult outcomes. \textbf{This is a very important point. We argue that comparing the standardized treatment effects newly presented in Table 1 addresses this by standardizing across outcome domains. This type of analysis is also done in Tables 4, 5, and 6.}
+Also, many of the outcomes are highly-gendered adult behaviors, such as employment and arrests, where we might not have expectations of comparable effects. Even if child care had similar effects on boys' and girls' early cognitive, emotional and behavioral outcomes, these might not translate into comparable adult outcomes. \textbf{This is a very important point. We argue that comparing the standardized treatment effects newly presented in Table 4 addresses this by standardizing across outcome domains.}
 
 Second, the manuscript does not offer theories or explanations of how effects might have occurred in different domains; it focuses instead on the summary measures. \textbf{By adding the average effect sizes, the results are more comparable across different domains. We removed the summary of individual measures from the main paper because it was a selection of outcomes rather than something comprehensive. In the description of results in Sections 4 and 5, we do more to offer suggestions to explain certain effect sizes.}
 
-The main area where it does dig deeper---gender differences in the benefits of the child care intervention relative to either home care or alternative care---doesn't lead to a convincing result, because the manuscript doesn't establish the comparability or representativeness of the comparison groups. The manuscript makes numerous statements about the inferiority of alternative child care for boys, but it hasn't made a strong case. \textbf{We expanded the explanations of the control group, referencing more explicitly Table A.7, which describes the baseline characteristics of the control-group children by selection into alternative care setting. We also explained in more detail the process of recruiting and randomizing the subjects. This helps establish that the sample reflected the children from disadvantaged families in the Chapel Hill area. Finally, the selection into home care or alternative center-based care is not randomized, as you mention. We included more explanation in the paper explicitly saying this and better explaining the assumptions of the methods we use to account for this selection. We aim for this expanded explanation to further support the analysis of results comparing ABC/CARE to alternative care settings by gender.}
+The main area where it does dig deeper---gender differences in the benefits of the child care intervention relative to either home care or alternative care---doesn't lead to a convincing result, because the manuscript doesn't establish the comparability or representativeness of the comparison groups. The manuscript makes numerous statements about the inferiority of alternative child care for boys, but it hasn't made a strong case. \textbf{We expanded the explanations of the control group, referencing more explicitly Table 5, which describes the baseline characteristics of the control-group children by selection into alternative care setting. We also explained in more detail the process of recruiting and randomizing the subjects. This helps establish that the sample reflected the children from disadvantaged families in the Chapel Hill area. Finally, the selection into home care or alternative center-based care is not randomized, as you mention. We included more explanation in the paper explicitly saying this and better explaining the assumptions of the methods we use to account for this selection. We aim for this expanded explanation to further support the analysis of results comparing ABC/CARE to alternative care settings by gender.}
 
 \subsection*{Gender Differences}
 
@@ -118,7 +118,7 @@ One piece of evidence that the counts may not be that valuable come from the rep
 
 The focus of the manuscript turns to the type of control. The numbers of significantly positive treatment effects for girls are mostly similar regardless of the type of control situation, but, there are more differences in the counts for boys when the control is alternative child care rather than home care. Again, however, there are exceptions in the patterns. The treatment for boys is stronger for the home care comparison group for health but stronger for the alternative care group for cognitive skills, parenting, education/employment/income. There is no substantive discussion about why these different results should occur. \textbf{We changed much of the paper to better analyze why the effects differ by gender and alternative environment. We now present evidence that (1) the control-group girls were more disadvantaged at baseline than the control-group boys, (2) more advantaged control-group boys stay at home, (3) more advantaged control-group girls attend alternative preschools. This selection pattern helps explain the control situation. The exceptions to the patterns in the new presentation of results are discussed in Section 5. We redid this analysis to address this concern that the connection between the selection into alternative preschools and the treatment effects were not developed. Now, these are connected and we find gender differences in the selection process that are consistent with the gender differences in the treatment effects.}
 
-The argument about the inferiority of alternative care seems to stem mainly from the higher count of positive treatment effects for the alternative care control than the home care control. However, these counts are similar to the counts for girls under each of the control situations. So this doesn't seem to provide strong evidence of gender differences in the harms associated with alternative care. Rather it looks like there is something unique about the home care that the boys received. \textbf{This is an insightful point that there could be a substantive difference in the care that boys received outside of ABC/CARE. Our new analysis addresses this directly by examining the baseline disadvantage and how that differs by gender. We present evidence to support what you intuited---that there is something different about the home care between boys and girls. We extrapolated this to differences in alternative preschools as well given that control-group girls are in more resource-constrained environments than control-group boys (see Table 7). The full discussion of this is in Section 5. [JJH: This is a great point. Can we hammer away at home environments? More fathers at home can explain.][We added a lot on the baseline home environments to help explain the counterfactual scenarios. We document three things: (1) boys are more advantaged than girls, (2) more advantaged boys stay at home than disadvantaged boys, (3) more advantaged girls attend alternative preschools than disadvantaged girls. This helps explain the gender differences in the estimates by counterfactual scenario.}
+The argument about the inferiority of alternative care seems to stem mainly from the higher count of positive treatment effects for the alternative care control than the home care control. However, these counts are similar to the counts for girls under each of the control situations. So this doesn't seem to provide strong evidence of gender differences in the harms associated with alternative care. Rather it looks like there is something unique about the home care that the boys received. \textbf{This is an insightful point that there could be a substantive difference in the care that boys received outside of ABC/CARE. Our new analysis addresses this directly by examining the baseline disadvantage and how that differs by gender. We present evidence to support what you intuited---that there is something different about the home care between boys and girls. We extrapolated this to differences in alternative preschools as well given that control-group girls are in more resource-constrained environments than control-group boys (see Table 6). The full discussion of this is in Section 5. [JJH: This is a great point. Can we hammer away at home environments? More fathers at home can explain.][We added a lot on the baseline home environments to help explain the counterfactual scenarios. We document three things: (1) boys are more advantaged than girls, (2) more advantaged boys stay at home than disadvantaged boys, (3) more advantaged girls attend alternative preschools than disadvantaged girls. This helps explain the gender differences in the estimates by counterfactual scenario.}
 
 \subsection*{Selection into Home Care and Alternative Care}
 
@@ -145,7 +145,7 @@ A particular concern is that with such a modest initial sample and with the gend
  \subsection*{Minor Points}
  \begin{itemize}
 \item P. 17, manuscript reports that treatment increases girls' college completion by 13 percentage points, but the corresponding figures are dropped from Table 5. \textbf{This was a typo (it should have said that high school completion increased by 13 percentage points). We have removed those tables.}
-\item Table A.5, is ``Mother Works'' a simple dummy variable? I can't determine how you arrived at the percentages listed in the table if it is. \textbf{Yes, it is a dummy variable. Most of the mothers in the sample did not work because they were in school. This is why the percentages in the table are so low. We now clarify this.}
+\item Table A.5, is ``Mother Works'' a simple dummy variable? I can't determine how you arrived at the percentages listed in the table if it is. \textbf{Yes, it is a dummy variable. Most of the mothers in the sample did not work because they were in school. This is why the percentages in the table are so low. We now clarify this. We also moved this table in-text to be Table 5.}
  \end{itemize}
  
  \clearpage
@@ -166,7 +166,7 @@ However, I have three major concerns about the paper as it currently stands. I w
 \begin{description}
 \item[Major concern 1]  Participation in center-based care in the control group is not randomized. As the paper is currently written, it seems like the treatment-control/home care and treatment-control/center care inferences are as credible as the treatment-full control group inferences. These inferences are not created equally. The treatment-full control group inference is based on randomization; sample sizes are small, but absent selective attrition, randomization should address both selection on observables and selection on unobservables. By contrast, the treatment-control/home care and treatment-control/center care comparisons only adjust for selection on observables. I think that this needs to be made very clear early on in the paper (well before page 14, where it is first mentioned in the current draft), and appropriate caveats on conclusions drawn from these inferences given throughout the text.  \textbf{We have expanded upon this point in the paper to ensure that the differences in the approaches are explicitly stated. We now first mention this distinction earlier. We also have adjusted the language describing the results (Section 5) so that the assumptions are more clearly stated (Section 3). This provides more qualifications to the results to address this concern.}
 
-\item[Major concern 2] There is too much focus on the sign and statistical significance of effects, and too little on magnitudes. In part, this is an artifact of the statistics (and corresponding inference) that the authors have chosen to highlight:  proportions of positive effects within categories. Given that the interest is in gender differences in treatment effects, shouldn't magnitudes matter as well?  I think that there is an easy solution to this:  instead of focusing on proportions, why not focus on standardized treatment effects within categories, as in the Kling, Liebman, and Katz (2007) evaluation of MTO or the Finkelstein, et al. (2012) evaluation of the Oregon Health Insurance Experiment?  Alternatively, monetization of the effects (e.g., to calculate cost-benefit ratios) would provide an omnibus magnitude, but it looks like you've already done this in another paper. \textbf{We followed this comment by adding average effect sizes (averaged over outcomes within a category). This is in Tables 1, 4, 5, and 6. We used a similar approach as the cited papers to present standardized treatment effects. \textbf{[JJH: We should do both.][That is now implemented.]} We agree that this is clearer than the previous presentation which relied on relative magnitude. It also helps contextualize the other results that still rely on relative magnitude. We have also clarified summarizing the results in this paper in relation to the companion paper on cost-benefit analysis (this clarification is done throughout). The very short summary is that ABC/CARE positively and significantly affected more results for women than for men. However, when weighing the treatment effects by the social cost, ABC/CARE had a higher return for men than for women. This is partially because the types of outcomes that show larger treatment effects for men than women, such as health, are very socially costly. There is another issue that there are many results that are not able to be monetized. Family outcomes such as marriage or number of children are good examples of this. It is possible that ABC/CARE positively affects females in non-market ways that are not well encapsulated in either of these papers. All of this is better explained in-text as a result of the feedback we received.}
+\item[Major concern 2] There is too much focus on the sign and statistical significance of effects, and too little on magnitudes. In part, this is an artifact of the statistics (and corresponding inference) that the authors have chosen to highlight:  proportions of positive effects within categories. Given that the interest is in gender differences in treatment effects, shouldn't magnitudes matter as well?  I think that there is an easy solution to this:  instead of focusing on proportions, why not focus on standardized treatment effects within categories, as in the Kling, Liebman, and Katz (2007) evaluation of MTO or the Finkelstein, et al. (2012) evaluation of the Oregon Health Insurance Experiment?  Alternatively, monetization of the effects (e.g., to calculate cost-benefit ratios) would provide an omnibus magnitude, but it looks like you've already done this in another paper. \textbf{We followed this comment by adding average effect sizes (averaged over outcomes within a category). This is in Table 4. We used a similar approach as the cited papers to present standardized treatment effects. \textbf{[JJH: We should do both.][That is now implemented.]} We agree that this is clearer than the previous presentation which relied on relative magnitude. It also helps contextualize the other results that still rely on relative magnitude. We have also clarified summarizing the results in this paper in relation to the companion paper on cost-benefit analysis (this clarification is done throughout). The very short summary is that ABC/CARE positively and significantly affected more results for women than for men. However, when weighing the treatment effects by the social cost, ABC/CARE had a higher return for men than for women. This is partially because the types of outcomes that show larger treatment effects for men than women, such as health, are very socially costly. There is another issue that there are many results that are not able to be monetized. Family outcomes such as marriage or number of children are good examples of this. It is possible that ABC/CARE positively affects females in non-market ways that are not well encapsulated in either of these papers. All of this is better explained in-text as a result of the feedback we received.}
 
 \item[Major concern 3:]  There is inadequate reconciliation with existing literature. There is (to me) a glaring lack of reconciliation with several key papers. First, and most importantly, Anderson (2008) estimates the impacts of a number of model early interventions---including ABC---correcting for multiple inference. This paper is not even cited, despite the fact that it is well known in this literature (cited 590 times in Google Scholar at the time this report was written). The authors really must cite this paper, and describe what they do differently from it; if gender differences in ABC have already been explored, what is the contribution? Do the authors arrive at different conclusions?  If so, why? \textbf{We included this citation explaining why we innovate on that paper. One thing that is important to note is that Anderson (2008) was published before the age-30 and -34 data collections were available. These later data collections are really important to capture more complete life cycle outcomes, especially health, crime, and employment. These findings complicate the gender differences reported in Anderson (2008). We also included this paper in Table C.1, which summarizes previous literature in more depth. Finally, we have expanded references to previous literature more generally both in the number of citations and the description given of those findings relative to ours. Gender differences of ABC/CARE have not been the primary subject matter of previous papers.}
 
@@ -179,12 +179,12 @@ Approach aside, the authors seem to be doing a similar dissection of counterfact
 \begin{enumerate}
 \item I would recommend being clearer about what is meant by early education ``quality'' in this paper. Is it simply the cost of the program or in resources (``structural quality'')?  Is it something about interactions between caregivers and children (``process quality'')? I don't think that any process quality measures are available for the ABC or CARE interventions, but discussions of quality in early intervention have evolved, and the text should reflect this. \textbf{We added more explanation about the quality of ABC/CARE and the alternatives throughout, but especially in the data section. The vocabulary of process and structural quality is useful and we incorporated this citing several papers that study the relationship between different aspects of the two. You are correct that there are no measures of process quality in ABC/CARE, let alone for the control-group subjects who attended alternative care. We expanded more on the aspects of quality that we do know about to argue that the quality in ABC/CARE was high, especially compared to the other programs during that time.}
 \item Figure 1 is troubling, in that it suggests that there is a lack of balance in observables across the control and treatment groups despite randomization. I think it would be helpful to see more discussion of the validity of randomized variation among non-attriters in the main text. (Relatedly, I don't think that dropouts post-randomization are not a problem, as seems to be implied in footnote 9.)  \textbf{That figure showed father's presence over time even after randomization. The pattern reflects a more widely documented trend that parents stay together more when the child is a son rather than a daughter. At randomization, the experimental groups were balanced in this variable and other variables related to disadvantage. Unfortunately, the exact randomization protocol is not documented, i.e., we do not know exactly what variables were used to match subjects and how this match occurred. To clarify the baseline characteristics, we replaced Figure 1 with Table 3. This shows the male/female and treatment/control differences at baseline. We also included more in-text explanation. Finally, our new analysis of the counterfactual scenarios relies on displaying differences in baseline characteristics by gender. The fact that girls are more disadvantaged than boys at baseline helps explain the differences in treatment effects and the differences in alternative options for the control group.}
-\item Likewise, it would be helpful to see differences in observable characteristics between control children who attended and did not attend alternative childcare. \textbf{This is reported in Table A.4. We expanded the explanation of it in text in order to speak to this concern. The main difference is that for control-group girls, working mothers always place them in alternative care. For control-group boys, working mothers do not always do this, most likely related to the fact that more fathers are present for boys than for girls.}
+\item Likewise, it would be helpful to see differences in observable characteristics between control children who attended and did not attend alternative childcare. \textbf{This is reported in Table 5. We expanded the explanation of it in text in order to speak to this concern. The main difference is that for control-group girls, working mothers always place them in alternative care. For control-group boys, working mothers do not always do this, most likely related to the fact that more fathers are present for boys than for girls.}
 \item Presenting estimates by gender and family background, as is done in section 5, doesn't seem advisable given the very small sample sizes. \textbf{We have removed this analysis. }
 \item Needing clarification:
 \begin{enumerate}
 		\item 1st full para., p. 2:  what do ``differentially promotes'' and ``differentially enhances'' mean exactly?  The language seems to imply that both sexes are positively affected by the intervention on all dimensions stated, but this does not appear to be the case (particularly with the step-down p-values) in Tables 4 and 5. \textbf{We changed the entire introduction so that the results are more clearly summarized.}
-		\item Last full paragraph, p. 3:  if ``all achievement measures favor males in the control group,'' why isn't the proportion favoring males in the control group 1.0 in Table 1? \textbf{This analysis is no longer presented.}
+		\item Last full paragraph, p. 3:  if ``all achievement measures favor males in the control group,'' why isn't the proportion favoring males in the control group 1.0 in Table 1? \textbf{This was a typo in the text (not the table) that we have corrected.}
 		\item P. 6:  It is not clear how the home visitation component can be safely ignored. Was there additional randomization of home visitation within the initial treatment group? \textbf{In ABC, the home visiting that occurred between 5 and 8 was randomized separately. No effect was found. In CARE, this 5-8 component was not randomized with all subjects who received center-based care also receiving this school-age component. We extrapolate that the findings from ABC extend to CARE as minimal changes were made to the school-age intervention. In sum, randomization of this component in ABC allows us to rule out that the age 5-8 intervention has an effect. We expanded the in-text reference related to this issue.}
 		\item P. 9:  ``Dropouts are evenly balanced across treatments and controls?''  In terms of numbers or observable characteristics? \textbf{They are evenly balanced in terms of numbers. We clarify this in-text. We find that the estimates are robust to correcting for this attrition, as reported in the appendix.}
 		\item P. 16:  how exactly does column (2) adjust for ``the differences in attrition''? \textbf{We adjust for attrition using IPW. This is documented in the appendix. We no longer present these tables in the main text.}
