--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -34,7 +34,7 @@ It is also useful to assess the average effectiveness of a program relative to a
 \Delta_j \left( V =1 \right) : =   \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | V = 1, W = 1 \right] := \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | V = 1, \bm{B} \in \mathcal{B}_0 \right].
 \end{equation}
 
-\textbf{[JJH: We never use these. Why bother to define?][We do use these and now highlight the estimates from the more in Section 5.]}
+\textbf{[JJH: We never use these. Why bother to define?][We do use these and now highlight the estimates from them more in Section 5.]}
 
 Random assignment to treatment does not directly identify the parameters in Equations~\eqref{eq:cont1} or~\eqref{eq:cont2}. Econometric methods are required to identify these parameters. We rely on matching to control for selection into home or alternative preschool by the control group. Our procedure assumes that the observed characteristics are sufficient to describe the selection into alternative center-based arrangements. In Appendix~\ref{appendix:results}, we show the balance across the groups in the matched samples along the observed selection variables (e.g., family characteristics, Apgar scores, gender), further justifying this approach.\footnote{To select adequate variables for matching, we conduct goodness of fit tests to find the most predictive set of baseline characteristics subject to penalty for adding parameters. This procedure is fully explained in Appendix~\ref{appendix:results}.}
 
