--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -14,10 +14,10 @@ This section presents our estimated treatment effects. We categorize outcomes an
 
 In Table~\ref{table:summary}, we classify these outcomes by age to preview our results, aggregating outcomes within ages and across categories. In Table~\ref{table:massiveall}, we aggregate across all ages and within categories. The benefits of random assignment to treatment are noticeable for both males and females. The benefits appear across the life cycle and across multiple outcomes. Participants in ABC/CARE benefit in terms of skills, both cognitive and socio-emotional. They also benefit in terms of scores on achievement tests, which help measure both cognitive and non-cognitive skills \citep{Almlund_Duckworth_etal_2011_ecoval}. These estimates reveal a clear female advantage in the program's effect on skill development.
 
-ABC/CARE had childcare, and thus facilitated maternal employment and education. The program has a sizable effect on mother labor, which aggregates parental labor income and employment across the life cycle.\footnote{In Appendix~\ref{appendix:results}, we show the effects on mother's employment individually. Table~\ref{table:abccare_rslt_female_cat4} shows that the effect on females is large across ages compared to those who stayed at home. This is also seen for males (Table~\ref{table:abccare_rslt_male_cat4}), although the effect on males does not resist adjustments for multiple hypothesis testing (Table~\ref{table:abccare_rslt_male_cat4_sd}). The female results are robust (Table~\ref{table:abccare_rslt_female_cat4_sd}). This goes against the findings of \citet{Havnes_Mogstad_2011_JPE}, which find that subsidized child care does not increase maternal labor supply, but is consistent with several other studies finding an increase in maternal labor supply as a result of subsidized child care \citep{Bauernschuster_Schlotter_2015_JPE,Bettendorf_etal_2015_LE,Geyer_etal_2015_LE,Brilli_etal_2016_REH}.} (The program offered full day child care for participants.) The effect size is 0.228 for females and about double that for males, 0.445.\footnote{In most households, parental income and maternal income are the same: 75\% of children in the sample grew up in a household with a single mother.} The program enhanced parenting, which aggregates HOME scores qualifying the relationship between the children and their mothers between ages 0 and 8.\footnote{The Home Observation for the Measurement of the Environment (HOME) was collected on the ABC/CARE subjects annually until age 5 and at age 8. To administer it, a trained researcher visited the homes to observe how the mother and child interacted, using a rubric of items that capture different dimensions of parent-child interactions. Up to 3 years of age, the HOME score measures maternal warmth, absence of punishment, organization of the environment, provision of appropriate toys, maternal involvement with child, and opportunity for variety. Up to 5 years of age, the HOME score measures stimulation through toys and experiences, stimulation of mature behavior, physical and language environment, avoidance of restriction, pride and affection, masculine stimulation, and independence from parental control. At 8 years of age, the HOME score measures organization of a stable environment, developmental stimulation, quality of the language environment, need gratification, fostering maturity, emotional climate, breadth of experience, aspects of physical environment, and play materials \citep{Bradley-Caldwell_1977_AJMD}.} \textbf{[JJH: We have to write up the parenting measures.][We added a footnote here explaining the parenting measures.]} The effect size on parenting for boys is smaller than that for girls (0.06 vs. 0.274) \textbf{[JJH: Where is this?][This is in the Parenting rows of Table 4.]}, in part due to the fact that the HOME measurement depends on punishment and boys are more likely to be punished. The families of boys scored lower in this dimension than the families of girls.
+ABC/CARE had childcare, and thus facilitated maternal employment and education. The program has a sizable effect on mother labor, which aggregates parental labor income and employment across the life cycle.\footnote{In Appendix~\ref{appendix:results}, we show the effects on mother's employment individually. Table~\ref{table:abccare_rslt_female_cat4} shows that the effect on females is large across ages compared to those who stayed at home. This is also seen for males (Table~\ref{table:abccare_rslt_male_cat4}), although the effect on males does not resist adjustments for multiple hypothesis testing (Table~\ref{table:abccare_rslt_male_cat4_sd}). The female results are robust (Table~\ref{table:abccare_rslt_female_cat4_sd}). This goes against the findings of \citet{Havnes_Mogstad_2011_JPE}, which find that subsidized child care does not increase maternal labor supply, but is consistent with several other studies finding an increase in maternal labor supply as a result of subsidized child care \citep{Bauernschuster_Schlotter_2015_JPE,Bettendorf_etal_2015_LE,Geyer_etal_2015_LE,Brilli_etal_2016_REH}.} (The program offered full day child care for participants.) The effect size is 0.228 for females and about double that for males, 0.445.\footnote{In most households, parental income and maternal income are the same: 75\% of children in the sample grew up in a household with a single mother.} The program enhanced parenting, which aggregates HOME scores qualifying the relationship between the children and their mothers between ages 0 and 8.\footnote{The Home Observation for the Measurement of the Environment (HOME) was collected on the ABC/CARE subjects annually until age 5 and at age 8. To administer it, a trained researcher visited the homes to observe how the mother and child interacted, using a rubric of items that capture different dimensions of parent-child interactions. Up to 3 years of age, the HOME score measures maternal warmth, absence of punishment, organization of the environment, provision of appropriate toys, maternal involvement with child, and opportunity for variety. Up to 5 years of age, the HOME score measures stimulation through toys and experiences, stimulation of mature behavior, physical and language environment, avoidance of restriction, pride and affection, masculine stimulation, and independence from parental control. At 8 years of age, the HOME score measures organization of a stable environment, developmental stimulation, quality of the language environment, need gratification, fostering maturity, emotional climate, breadth of experience, aspects of physical environment, and play materials \citep{Bradley-Caldwell_1977_AJMD}.} The effect size on parenting for boys is smaller than that for girls (0.06 vs. 0.274), in part due to the fact that the HOME measurement depends on punishment and boys are more likely to be punished. The families of boys scored lower in this dimension than the families of girls.
 
 In outcomes like education, employment, crime, risky behavior (which includes, for example, drug use) there are also sizable effects. In our companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, we document that these effects translate into a benefit/cost ratio of $7.3$. This calculation accounts for the costs of implementing the program, including the welfare loss generated by taxing society in order to fund the program.\footnote{One advantage of the benefit/cost analysis is that it intrinsically accounts for extreme values. For example, individual crimes are weighed by their social cost instead of the average crime being weighed.}
 
-Consistent with the results in Table~\ref{table:summary}, the results in Table~\ref{table:massiveall} show that females benefit more from treatment when compared with males. In 7 out of the 10 categories that we consider, the within-category average effect size is larger for females. In 9 out of 10 categories, the proportion of positive effects is at least as large for males compared to that of females. The same is true for the proportion of positive and significant effects, at the 10\% level. Comparisons based on the \citet{Rosenbaum_2005_Distribution_JRSS} $p$-values are less clear cut. We discuss these next.
+Consistent with the results in Table~\ref{table:summary}, the results in Table~\ref{table:massiveall} show that females benefit more from treatment when compared with males. In 7 out of the 10 categories that we consider, the within-category average effect size is larger for females. In 9 out of 10 categories, the proportion of positive effects is at least as large for males compared to that of females. The same is true for the proportion of positive and significant effects, at the 10\% level. Gender comparisons based on the \citet{Rosenbaum_2005_Distribution_JRSS} $p$-values are less clear. We now present more results to further clarify the gender differences.
 
 
